--- a/jeuHades.html
+++ b/jeuHades.html
@@ -64,7 +64,7 @@
               </div>
           </div>
           <div class="col cartePrincipale">
-              <p class="text-primary titreJeu">HADES</p>
+              <h2 class="text-primary titreJeu">HADES</h2>
               <button type="button" class="btn btn-primary">Action-RPG</button>
               <button type="button" class="btn btn-primary">Roguelite</button>
               <p class="prixJeu">Prix : 21.99€</p>
@@ -76,11 +76,11 @@
 
     <div class="container bg-dark text-light carteMilieu">
       <div class="row">
-        <div class="col text-center text-primary grosTitre">
+        <h3 class="col text-center text-primary grosTitre">
           Les dieux 
-        </div>
+        </h3>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Zeus</p>
+          <h4 class="nomDieux">Zeus</h4>
           <div class="row">
             <div class="col-md-5">
               <img class="w-100" src="img/zeus.png" alt="">
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Athéna</p>
+          <h4 class="nomDieux">Athéna</h4>
           <div class="row">
             <div class="col-md-7">
               <p>Athéna est la déesse olympienne de la sagesse et de la guerre stratégique. Elle offre des avantages à Zagreus qui permettent à ses capacités de dévier les attaques ennemies. De plus, elle offre également des avantages qui réduisent les dégâts ou augmentent d'autres options défensives.
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Poséidon</p>
+          <h4 class="nomDieux">Poséidon</h4>
           <div class="row">
             <div class="col-md-5">
               <img class="w-100" src="img/poseidon.png" alt="">
@@ -114,7 +114,7 @@
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Arès</p>
+          <h4 class="nomDieux">Arès</h4>
           <div class="row">
             <div class="col-md-5">
               <img class="w-100" src="img/ares.png" alt="">
@@ -126,7 +126,7 @@
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Dionysos</p>
+          <h4 class="nomDieux">Dionysos</h4>
           <div class="row">
             <div class="col-md-5">
               <img class="w-100" src="img/dionysos.png" alt="">
@@ -144,7 +144,7 @@
     <div class="container mt-5 text-center">
       <div class="row">
         <div class="col">
-          <p class="text-primary mt-5 grosTitre ">Gameplay</p>
+          <h3 class="text-primary mt-5 grosTitre ">Gameplay</h3>
           <p class="texteVideo">Explorez encore plus en profondeur l'univers d'Hadès et de la quête de Zagreus grâce à cette vidéo.</p>
         </div>
         <div class="col">
@@ -188,7 +188,7 @@
 
 
     <div class="container py-5 text-center">
-      <h4 id="contact" class="titreContact text-light">NOUS CONTACTER</h4>
+      <h5 id="contact" class="titreContact text-light">NOUS CONTACTER</h5>
         <p class="texteFooter">Des questions ? N'hésitez pas !</p>
         <p class="texteFooter">Contactez nous dès maintenant pour bénéficier de notre expertise et de notre passion !</p>
       <div class="row">
