--- a/jeuOverwatch.html
+++ b/jeuOverwatch.html
@@ -64,7 +64,7 @@
               </div>
           </div>
           <div class="col cartePrincipale">
-              <p class="text-primary titreJeu">OVERWATCH 2</p>
+              <h2 class="text-primary titreJeu">OVERWATCH 2</h2>
               <button type="button" class="btn btn-primary">FPS</button>
               <button type="button" class="btn btn-primary">Hero shooter</button>
               <button type="button" class="btn btn-primary">Multijoueur</button>
@@ -77,11 +77,11 @@
 
     <div class="container bg-dark text-light carteMilieu">
       <div class="row">
-        <div class="col text-center text-primary grosTitre">
+        <h3 class="col text-center text-primary grosTitre">
           Les héros 
-        </div>
+        </h3>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Tracer</p>
+          <h4 class="nomCreatures">Tracer</h4>
           <div class="row">
             <div class="col-md-5">
               <img class="w-100" src="img/tracer.png" alt="">
@@ -92,7 +92,7 @@
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Ange</p>
+          <h4 class="nomCreatures">Ange</h4>
           <div class="row">
             <div class="col-md-7">
               <p>Ange est un personnage de soutien qui peut guérir ses coéquipiers et leur offrir des boosts de dégâts. Elle est équipée d'un pistolet de soins et d'un pistolet à cadence rapide pour infliger des dégâts. Elle peut également voler à travers le champ de bataille et ressusciter des coéquipiers tombés au combat.</p>
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Winston</p>
+          <h4 class="nomCreatures">Winston</h4>
           <div class="row">
             <div class="col-md-5">
               <img class="w-100" src="img/winston.png" alt="">
@@ -114,7 +114,7 @@
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Ana</p>
+          <h4 class="nomCreatures">Ana</h4>
           <div class="row">
             <div class="col-md-5">
               <img class="w-100" src="img/ana.png" alt="">
@@ -125,7 +125,7 @@
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Kiriko</p>
+          <h4 class="nomCreatures">Kiriko</h4>
           <div class="row">
             <div class="col-md-5">
               <img class="w-100" src="img/kiriko.png" alt="">
@@ -142,7 +142,7 @@
     <div class="container mt-5 text-center">
       <div class="row">
         <div class="col">
-          <p class="text-primary mt-5 grosTitre">Gameplay</p>
+          <h3 class="text-primary mt-5 grosTitre">Gameplay</h3>
           <p class="texteVideo">Découvrez votre nouveau personnage préféré grâce à cette vidéo</p>
         </div>
         <div class="col">
@@ -187,7 +187,7 @@
 
 
     <div class="container py-5 text-center">
-      <h4 id="contact" class="titreContact text-light">NOUS CONTACTER</h4>
+      <h5 id="contact" class="titreContact text-light">NOUS CONTACTER</h5>
         <p class="texteFooter">Des questions ? N'hésitez pas !</p>
         <p class="texteFooter">Contactez nous dès maintenant pour bénéficier de notre expertise et de notre passion !</p>
       <div class="row">
