--- a/jeuMinecraft.html
+++ b/jeuMinecraft.html
@@ -64,7 +64,7 @@
               </div>
           </div>
           <div class="col cartePrincipale">
-              <p class="text-primary titreJeu">MINECRAFT</p>
+              <h2 class="text-primary titreJeu">MINECRAFT</h2>
               <button type="button" class="btn btn-primary">Bac à sable</button>
               <button type="button" class="btn btn-primary">Aventure</button>
               <p class="prixJeu">Prix : 19.99€</p>
@@ -76,11 +76,11 @@
 
     <div class="container bg-dark text-light carteMilieu">
       <div class="row">
-        <div class="col text-center text-primary grosTitre">
+        <h3 class="col text-center text-primary grosTitre">
           Les créatures 
-        </div>
+        </h3>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Le Zombie</p>
+          <h4 class="nomCreatures">Le Zombie</h4>
           <div class="row">
             <div class="col-md-5">
               <img class="w-100" src="img/zombie.png" alt="">
@@ -91,7 +91,7 @@
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Le Creeper</p>
+          <h4 class="nomCreatures">Le Creeper</h4>
           <div class="row">
             <div class="col-md-7">
               <p>Les Creepers sont des créatures humanoïdes ayant la peau verte parsemée de points gris, avec quatre pattes et aucun bras. Cela est dû au fait qu'ils soient basés sur un modèle de cochon raté par Notch. Leur tête est dans la continuité du corps, ils ont les orbites vides et une expression triste. Notch qualifie les Creepers de « croustillants, comme des feuilles mortes ».</p>
@@ -102,7 +102,7 @@
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Le squelette</p>
+          <h4 class="nomCreatures">Le squelette</h4>
           <div class="row">
             <div class="col-md-5">
               <img class="w-100" src="img/squelette.png" alt="">
@@ -113,7 +113,7 @@
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">L'araignée</p>
+          <h4 class="nomCreatures">L'araignée</h4>
           <div class="row">
             <div class="col-md-5">
               <img class="w-100" src="img/araignée.png" alt="">
@@ -124,7 +124,7 @@
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Le villageois</p>
+          <h4 class="nomCreatures">Le villageois</h4>
           <div class="row">
             <div class="col-md-5">
               <img class="w-100" src="img/villageois.png" alt="">
@@ -141,7 +141,7 @@
     <div class="container mt-5 text-center">
       <div class="row">
         <div class="col">
-          <p class="text-primary mt-5 grosTitre ">Gameplay</p>
+          <h3 class="text-primary mt-5 grosTitre ">Gameplay</h3>
           <p class="texteVideo">Voilà une vidéo si vous voulez découvrir Minecraft !</p>
         </div>
         <div class="col">
@@ -185,7 +185,7 @@
 
 
     <div class="container py-5 text-center">
-      <h4 id="contact" class="titreContact text-light">NOUS CONTACTER</h4>
+      <h5 id="contact" class="titreContact text-light">NOUS CONTACTER</h5>
         <p class="texteFooter">Des questions ? N'hésitez pas !</p>
         <p class="texteFooter">Contactez nous dès maintenant pour bénéficier de notre expertise et de notre passion !</p>
       <div class="row">
