--- a/jeuHades.html
+++ b/jeuHades.html
@@ -56,11 +56,11 @@
 
 
 
-    <div class="container-fluid text-center bg-dark avisPoua">
+    <div class="container-fluid text-center bg-dark caracteristiquesBandeau">
       <div class="row">
           <div class="col text-primary cartePrincipale">
               <div>
-                  <img src="img/hades.jpg" height="100%" width="100%" alt="">
+                  <img src="img/hades.jpg" height="100%" width="100%" alt="Image illustrant Hadès">
               </div>
           </div>
           <div class="col cartePrincipale">
@@ -83,7 +83,7 @@
           <h4 class="nomDieux">Zeus</h4>
           <div class="row">
             <div class="col-md-5">
-              <img class="w-100" src="img/zeus.png" alt="">
+              <img class="w-100" src="img/zeus.png" alt="Image de Zeus dans Hadès">
             </div> 
             <div class="col-md-7">
               <p>Zeus est le dieu du ciel et du tonnerre, et le souverain des dieux de l'Olympe, Zeus est le frère cadet d'Hadès et l'oncle de Zagreus. Il offre des avantages à son neveu qui donnent à ses capacités des éclairs en chaîne ou des coups de foudre.</p>
@@ -98,7 +98,7 @@
                 Athéna offre d'excellentes options défensives avec ses avantages, vous protégeant des dégâts</p>
             </div> 
             <div class="col-md-5">
-              <img class="w-100" src="img/athena.png" alt="">
+              <img class="w-100" src="img/athena.png" alt="Image d'Athéna dans Hadès">
             </div> 
           </div>
         </div>
@@ -106,7 +106,7 @@
           <h4 class="nomDieux">Poséidon</h4>
           <div class="row">
             <div class="col-md-5">
-              <img class="w-100" src="img/poseidon.png" alt="">
+              <img class="w-100" src="img/poseidon.png" alt="Image de Poséidon dans Hadès">
             </div> 
             <div class="col-md-7">
               <p>Poséidon est le dieu de la mer et des chevaux, et parfois désigné par l'épithète de "Earthshaker". Lui, comme beaucoup de ses collègues olympiens, offre des avantages à Zagreus qui augmentent considérablement les dégâts de ses capacités, ainsi que ses capacités à infliger Knockback.</p>
@@ -117,7 +117,7 @@
           <h4 class="nomDieux">Arès</h4>
           <div class="row">
             <div class="col-md-5">
-              <img class="w-100" src="img/ares.png" alt="">
+              <img class="w-100" src="img/ares.png" alt="Image d'Arès dans Hadès">
             </div> 
             <div class="col-md-7">
               <p>Arès est le dieu olympien de la guerre. Contrairement à Athéna, plus stratégique, le domaine d'Ares concerne les aspects physiques, violents et sauvages de la guerre.
@@ -129,7 +129,7 @@
           <h4 class="nomDieux">Dionysos</h4>
           <div class="row">
             <div class="col-md-5">
-              <img class="w-100" src="img/dionysos.png" alt="">
+              <img class="w-100" src="img/dionysos.png" alt="Image de Dionysos dans Hadès">
             </div> 
             <div class="col-md-7">
               <p>Dionysos est le dieu olympien du vin et de la folie, et cousin de Zagreus. Il offre des avantages à Zagreus autour de sa signature Status Curse, Hangover, ralentissement et étourdissement des ennemis, ainsi que divers avantages sur le thème de l'alcool.
@@ -213,7 +213,7 @@
         </div>
         <footer>
           <hr class="border border-primary opacity-100">
-          <img src="img/logoSite.png" height="80px" alt="...">
+          <img src="img/logoSite.png" height="80px" alt="Logo de Gameify">
           <p class="copyright">&copy; 2023 Gameify. Tous droits réservés.</p>
         </footer>
       </div>
