--- a/jeuMinecraft.html
+++ b/jeuMinecraft.html
@@ -13,7 +13,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary barrePrincipale">
         <div class="container-fluid">
-          <img src="img/logoSite.png" class="logoSite" alt="...">
+          <img src="img/logoSite.png" class="logoSite" alt="Logo de Gameify">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -56,11 +56,11 @@
 
 
 
-    <div class="container-fluid text-center bg-dark avisPoua">
+    <div class="container-fluid text-center bg-dark caracteristiquesBandeau">
       <div class="row">
           <div class="col text-primary cartePrincipale">
               <div>
-                  <img src="img/minecraft.jpg" height="100%" width="100%" alt="">
+                  <img src="img/minecraft.jpg" height="100%" width="100%" alt="Image illustrant Minecraft">
               </div>
           </div>
           <div class="col cartePrincipale">
@@ -83,7 +83,7 @@
           <h4 class="nomCreatures">Le Zombie</h4>
           <div class="row">
             <div class="col-md-5">
-              <img class="w-100" src="img/zombie.png" alt="">
+              <img class="w-100" src="img/zombie.png" alt="Image d'un zombie de Minecraft">
             </div> 
             <div class="col-md-7">
               <p>Les zombies sont des créatures hostiles courantes qui attaquent les joueurs et les villageois et brûlent à la lumière du jour. Les zombies poussent des grognements et des gémissements caractéristiques qui permettent de les entendre lorsqu'ils sont à proximité d'un joueur.</p>
@@ -97,15 +97,15 @@
               <p>Les Creepers sont des créatures humanoïdes ayant la peau verte parsemée de points gris, avec quatre pattes et aucun bras. Cela est dû au fait qu'ils soient basés sur un modèle de cochon raté par Notch. Leur tête est dans la continuité du corps, ils ont les orbites vides et une expression triste. Notch qualifie les Creepers de « croustillants, comme des feuilles mortes ».</p>
             </div> 
             <div class="col-md-5">
-              <img class="w-100" src="img/creeper.png" alt="">
+              <img class="w-100" src="img/creeper.png" alt="Image d'un creeper de Minecraft">
             </div> 
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <h4 class="nomCreatures">Le squelette</h4>
+          <h4 class="nomCreatures">Le Squelette</h4>
           <div class="row">
             <div class="col-md-5">
-              <img class="w-100" src="img/squelette.png" alt="">
+              <img class="w-100" src="img/squelette.png" alt="Image d'un squelette de Minecraft">
             </div> 
             <div class="col-md-7">
               <p>Les squelettes (nom anglais : skeletons) sont des créatures hostiles qui possèdent un arc et qui tirent des flèches. Comme les zombies, les squelettes n'apparaissent que dans les zones sombres où le niveau de lumière est égal à 0. Ils peuvent aussi apparaître sur le dos d'une araignée, il est alors question d'araignée chevauchée, qui combine les talents d'archers du squelette et l'agilité de l'araignée, en faisant un adversaire redoutable.</p>
@@ -113,10 +113,10 @@
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <h4 class="nomCreatures">L'araignée</h4>
+          <h4 class="nomCreatures">L'Araignée</h4>
           <div class="row">
             <div class="col-md-5">
-              <img class="w-100" src="img/araignée.png" alt="">
+              <img class="w-100" src="img/araignée.png" alt="Image d'une araignée de Minecraft">
             </div> 
             <div class="col-md-7">
               <p>Les araignées (nom anglais : spiders) sont des créatures neutres communes qui ont la capacité de grimper aux murs. Elles apparaissent à la Surface dans un espace de 3×3×1.5 blocs (centré sur le bloc central), à un niveau de luminosité de inférieur ou égal à 7, par groupes de 4. Les blocs du dessus peuvent être transparents, mais pas solides.</p>
@@ -124,10 +124,10 @@
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <h4 class="nomCreatures">Le villageois</h4>
+          <h4 class="nomCreatures">Le Villageois</h4>
           <div class="row">
             <div class="col-md-5">
-              <img class="w-100" src="img/villageois.png" alt="">
+              <img class="w-100" src="img/villageois.png" alt="Image d'un villageois de Minecraft">
             </div> 
             <div class="col-md-7">
               <p>Un villageois (nom anglais : villager) est un personnage non-joueur pacifique avec qui le joueur peut commercer, notamment avec des émeraudes qui constituent la monnaie des villageois. Leurs vêtements varient en fonction de la profession qu'ils exercent ou du biome dans lequel ils apparaissent.</p>
@@ -150,7 +150,7 @@
       </div>
     </div>
 
-    <div class="container-fluid text-center mt-5 py-3 avisPoua">
+    <div class="container-fluid text-center mt-5 py-3 caracteristiquesBandeau">
       <div class="row justify-content-center">
         <div class="grosTitre">Découvrez nos autres titres</div>
         <div class="col text-primary">
@@ -210,7 +210,7 @@
         </div>
         <footer>
           <hr class="border border-primary opacity-100">
-          <img src="img/logoSite.png" height="80px" alt="...">
+          <img src="img/logoSite.png" height="80px" alt="Logo de Gameify">
           <p class="copyright">&copy; 2023 Gameify. Tous droits réservés.</p>
         </footer>
       </div>
