--- a/jeuOverwatch.html
+++ b/jeuOverwatch.html
@@ -13,7 +13,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary barrePrincipale">
         <div class="container-fluid">
-          <img src="img/logoSite.png" class="logoSite" alt="...">
+          <img src="img/logoSite.png" class="logoSite" alt="Logo de Gameify">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -56,11 +56,11 @@
 
 
 
-    <div class="container-fluid text-center bg-dark avisPoua">
+    <div class="container-fluid text-center bg-dark caracteristiquesBandeau">
       <div class="row">
           <div class="col text-primary cartePrincipale">
               <div>
-                  <img src="img/overwatch.jpg" height="100%" width="100%" alt="">
+                  <img src="img/overwatch.jpg" height="100%" width="100%" alt="Image illustrant Overwatch 2">
               </div>
           </div>
           <div class="col cartePrincipale">
@@ -84,7 +84,7 @@
           <h4 class="nomCreatures">Tracer</h4>
           <div class="row">
             <div class="col-md-5">
-              <img class="w-100" src="img/tracer.png" alt="">
+              <img class="w-100" src="img/tracer.png" alt="Image de Tracer dans Overwatch 2">
             </div> 
             <div class="col-md-7">
               <p>Tracer est un personnage rapide et mobile qui utilise son arsenal de pistolets pour infliger des dégâts à courte portée. Elle est capable de se téléporter et de bouger rapidement sur le champ de bataille, ce qui en fait un personnage idéal pour les missions de flanquement.</p>
@@ -98,7 +98,7 @@
               <p>Ange est un personnage de soutien qui peut guérir ses coéquipiers et leur offrir des boosts de dégâts. Elle est équipée d'un pistolet de soins et d'un pistolet à cadence rapide pour infliger des dégâts. Elle peut également voler à travers le champ de bataille et ressusciter des coéquipiers tombés au combat.</p>
             </div> 
             <div class="col-md-5">
-              <img class="w-100" src="img/ange.png" alt="">
+              <img class="w-100" src="img/ange.png" alt="Image d'Ange dans Overwatch 2">
             </div> 
           </div>
         </div>
@@ -106,7 +106,7 @@
           <h4 class="nomCreatures">Winston</h4>
           <div class="row">
             <div class="col-md-5">
-              <img class="w-100" src="img/winston.png" alt="">
+              <img class="w-100" src="img/winston.png" alt="Image de Winston dans Overwatch 2">
             </div> 
             <div class="col-md-7">
               <p>Winston est un personnage tank qui peut encaisser beaucoup de dégâts et absorber les attaques ennemies. Il possède un saut lui permettant de se déplacer rapidement sur le champ de bataille, ainsi qu'un bouclier pour protéger ses coéquipiers.</p>
@@ -117,7 +117,7 @@
           <h4 class="nomCreatures">Ana</h4>
           <div class="row">
             <div class="col-md-5">
-              <img class="w-100" src="img/ana.png" alt="">
+              <img class="w-100" src="img/ana.png" alt="Image d'Ana dans Overwatch 2">
             </div> 
             <div class="col-md-7">
               <p>Ana est un personnage de soutien qui utilise un fusil sniper pour infliger des dégâts à distance et soigner ses coéquipiers. Elle peut également lancer des grenades qui soignent les alliés ou infligent des dégâts aux ennemis, ainsi qu'utiliser son ultime pour booster les capacités de ses alliés.</p>
@@ -128,7 +128,7 @@
           <h4 class="nomCreatures">Kiriko</h4>
           <div class="row">
             <div class="col-md-5">
-              <img class="w-100" src="img/kiriko.png" alt="">
+              <img class="w-100" src="img/kiriko.png" alt="Image de Kiriko dans Overwatch 2">
             </div> 
             <div class="col-md-7">
               <p>Kiriko est un nouveau personnage d'Overwatch 2. Elle est équipée d'une épée et peut effectuer des mouvements rapides pour infliger des dégâts à ses ennemis. Elle peut également projeter des shurikens pour attaquer à distance.</p>
@@ -151,7 +151,7 @@
       </div>
     </div>
 
-    <div class="container-fluid text-center mt-5 py-3 avisPoua">
+    <div class="container-fluid text-center mt-5 py-3 caracteristiquesBandeau">
       <div class="row justify-content-center">
         <div class="grosTitre">Découvrez nos autres titres</div>
         
@@ -212,7 +212,7 @@
         </div>
         <footer>
           <hr class="border border-primary opacity-100">
-          <img src="img/logoSite.png" height="80px" alt="...">
+          <img src="img/logoSite.png" height="80px" alt="Logo de Gameify">
           <p class="copyright">&copy; 2023 Gameify. Tous droits réservés.</p>
         </footer>
       </div>
