--- a/jeuTFT.html
+++ b/jeuTFT.html
@@ -13,7 +13,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary barrePrincipale">
         <div class="container-fluid">
-          <img src="img/logoSite.png" class="logoSite" alt="...">
+          <img src="img/logoSite.png" class="logoSite" alt="Logo de Gameify">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -56,15 +56,15 @@
 
 
 
-    <div class="container-fluid text-center bg-dark avisPoua">
+    <div class="container-fluid text-center bg-dark caracteristiquesBandeau">
       <div class="row">
           <div class="col text-primary cartePrincipale">
               <div>
-                  <img src="img/tft.jpg" height="100%" width="100%" alt="">
+                  <img src="img/tft.jpg" height="100%" width="100%" alt="Image illustrant Teamfight Tactics">
               </div>
           </div>
           <div class="col cartePrincipale">
-              <p class="text-primary titreJeu">TEAMFIGHT TACTICS</p>
+              <h2 class="text-primary titreJeu">TEAMFIGHT TACTICS</h2>
               <button type="button" class="btn btn-primary">Auto Battler</button>
               <button type="button" class="btn btn-primary">Stratégie</button>
               <button type="button" class="btn btn-primary">League of Legends</button>
@@ -77,14 +77,14 @@
 
     <div class="container bg-dark text-light carteMilieu">
       <div class="row">
-        <div class="col text-center text-primary grosTitre">
+        <h3 class="col text-center text-primary grosTitre">
           Quelques champions 
-        </div>
+        </h3>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Gnar</p>
+          <h4 class="nomChampions">Gnar</h4>
           <div class="row">
             <div class="col-md-5">
-              <img class="w-100" src="img/gnar.png" alt="">
+              <img class="w-100" src="img/gnar.png" alt="Image de Gnar dans Teamfight Tactics lors du set 8.5">
             </div> 
             <div class="col-md-7">
               <p>Gnar est un champion lutteur qui peut se transformer en un géant effrayant pour infliger des dégâts massifs à ses ennemis. En plus de ses attaques de base et de ses compétences de lutte, Gnar peut également jeter des rochers sur ses ennemis pour les étourdir brièvement et leur infliger des dégâts supplémentaires.</p>
@@ -92,21 +92,21 @@
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Yasuo</p>
+          <h4 class="nomChampions">Yasuo</h4>
           <div class="row">
             <div class="col-md-7">
               <p>Yasuo est un épéiste agile qui se concentre sur l'évasion et la protection contre les dégâts. Il peut utiliser sa compétence pour se déplacer rapidement vers un ennemi, lui infligeant des dégâts et le projetant en l'air. Sa compétence ultime lui permet également de sauter dans les airs et de frapper tous les ennemis autour de lui.</p>
             </div> 
             <div class="col-md-5">
-              <img class="w-100" src="img/yasuo.png" alt="">
+              <img class="w-100" src="img/yasuo.png" alt="Image de Yasuo dans Teamfight Tactics lors du set 8.5">
             </div> 
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Ashe</p>
+          <h4 class="nomChampions">Ashe</h4>
           <div class="row">
             <div class="col-md-5">
-              <img class="w-100" src="img/ashe.png" alt="">
+              <img class="w-100" src="img/ashe.png" alt="Image de Ashe dans Teamfight Tactics lors du set 8.5">
             </div> 
             <div class="col-md-7">
               <p>Ashe est une archère qui peut tirer des flèches de glace pour ralentir et infliger des dégâts à ses ennemis. Elle peut également lancer un sort de zone qui ralentit et inflige des dégâts à tous les ennemis autour d'elle. Sa compétence passive lui permet également de déclencher des coups critiques avec ses attaques de base contre les ennemis qui ont déjà été ralentis.</p>
@@ -114,10 +114,10 @@
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Ekko</p>
+          <h4 class="nomChampions">Ekko</h4>
           <div class="row">
             <div class="col-md-5">
-              <img class="w-100" src="img/ekko.png" alt="">
+              <img class="w-100" src="img/ekko.png" alt="Image d'Ekko dans Teamfight Tactics lors du set 8.5">
             </div> 
             <div class="col-md-7">
               <p>Ekko est un assassin qui peut utiliser sa capacité ultime pour remonter le temps et revenir à l'endroit où il se trouvait quelques secondes auparavant. Il peut également créer une onde de choc qui ralentit et endommage les ennemis autour de lui. Sa compétence passive lui permet également de gagner des charges de bouclier chaque fois qu'il utilise une compétence.</p>
@@ -125,10 +125,10 @@
           </div>
         </div>
         <div class="col-md-4 text-center">
-          <p class="nomCreatures">Sona</p>
+          <h4 class="nomChampions">Sona</h4>
           <div class="row">
             <div class="col-md-5">
-              <img class="w-100" src="img/sona.png" alt="">
+              <img class="w-100" src="img/sona.png" alt="Image de Sona dans Teamfight Tactics lors du set 8.5">
             </div> 
             <div class="col-md-7">
               <p>Sona est une championne support qui se concentre sur le soutien de son équipe grâce à sa musique et ses sorts. Elle peut augmenter la vitesse de déplacement, la résistance magique et l'attaque de ses alliés tout en infligeant des dégâts à ses ennemis. Elle peut également renforcer son ultime, qui permet de neutraliser temporairement les ennemis autour d'elle.</p>
@@ -142,7 +142,7 @@
     <div class="container mt-5 text-center">
       <div class="row">
         <div class="col">
-          <p class="text-primary mt-5 grosTitre ">Gameplay</p>
+          <h3 class="text-primary mt-5 grosTitre ">Gameplay</h3>
           <p class="texteVideo">Si vous voulez découvrir le nouveau set de TFT, regardez cette vidéo</p>
         </div>
         <div class="col">
@@ -150,7 +150,7 @@
       </div>
     </div>
 
-    <div class="container-fluid text-center mt-5 py-3 avisPoua">
+    <div class="container-fluid text-center mt-5 py-3 caracteristiquesBandeau">
       <div class="row justify-content-center">
         <div class="grosTitre">Découvrez nos autres titres</div>
         
@@ -186,7 +186,7 @@
 
 
     <div class="container py-5 text-center">
-      <h4 id="contact" class="titreContact text-light">NOUS CONTACTER</h4>
+      <h5 id="contact" class="titreContact text-light">NOUS CONTACTER</h5>
         <p class="texteFooter">Des questions ? N'hésitez pas !</p>
         <p class="texteFooter">Contactez nous dès maintenant pour bénéficier de notre expertise et de notre passion !</p>
       <div class="row">
@@ -211,7 +211,7 @@
         </div>
         <footer>
           <hr class="border border-primary opacity-100">
-          <img src="img/logoSite.png" height="80px" alt="...">
+          <img src="img/logoSite.png" height="80px" alt="Logo de Gameify">
           <p class="copyright">&copy; 2023 Gameify. Tous droits réservés.</p>
         </footer>
       </div>
